# Hackathon-Stellaroid_Earn

./: .gitignore  .vercelignore  AGENTS.md  Cargo.toml  MAINTENANCE.md  README.md  ROADMAP.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  maintenance.yml
.github/workflows/: frontend-ci.yml  release.yml
contract/: README.md
contract/src/: lib.rs  test.rs
docs/: ARCHITECTURE.md  DEMO_CHECKLIST.md  SECURITY.md  STELLAROID_TECH_CUTOVER.md  USER_FEEDBACK.md
docs-new/: README.md
docs-new/bootcamp-ops/: participant-checklist.md
docs-new/research/: bootcamp-mvp-strategy.md  nft-integration-research.md
docs-new/specs/: dapp-idea-prompt-template.md  stellaroid-earn-spec.md  web3-nft-badge-spec.md
frontend/: .env.example  .gitignore  AGENTS.md  README.md  TODO.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json
frontend/e2e/: employer-handoff.spec.ts  issuer-onboarding.spec.ts  pilot-export.spec.ts  proof-metadata.spec.ts  register-verify-pay.spec.ts  status-page.spec.ts
frontend/src/: middleware.ts
frontend/src/lib/: i18n.ts  (+30 more)
learning/auth-and-admin/: Cargo.toml
learning/conditionals-and-loops/: Cargo.toml
learning/enums-and-matches/: Cargo.toml
learning/events/: Cargo.toml
learning/functions-and-errors/: Cargo.toml
learning/hello-world/: Cargo.toml
learning/maps-and-keys/: Cargo.toml
learning/rust-syntax/: Cargo.toml
learning/scripts/: run-tests.ps1  run-tests.sh
learning/state-storage/: Cargo.toml
learning/storage-ttl/: Cargo.toml
learning/structs-and-methods/: Cargo.toml
(+119 files in other folders)
